--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <body>
     <div id="tete">
     	<h1><b>BIENVENU A OUAGADOUGOU</b></h1>
-    	<div class="fast">
+    	<img src="logo.png" alt="logo">
+    	<div class="nav">
     	<ul>
     	    <li><a href="#">Accueil</a></li>
     	    <li><a href="patrimoine.html">Patrimoine</a></li>
