--- a/patrimoine.html
+++ b/patrimoine.html
@@ -9,31 +9,31 @@
     </head>
     <body>
     <hr>
-    <div id="tete">
-    	<h1>BIENVENU A OUAGADOUGOU</h1>	
-    	<img src="kossyam.jpeg" alt="logo">
+   <div id="tete">
+    	<h1><b>BIENVENU A OUAGADOUGOU</b></h1>
+    	<img src="logo.png" alt="logo">
+    	<div class="nav">
+    	<ul>
+    	    <li><a href="#">Accueil</a></li>
+    	    <li><a href="patrimoine.html">Patrimoine</a></li>
+    	     <li><a href="hotel.html">Reservation d'hotel</a></li>
+    	 <li><a href="galerie.html">Galerie</a></li>
+    	</ul>
+    </div>
     	</div>
     	<h2><u>Ouagadougou compte plusieurs lieux historiques et culturels.<br><i>ci dessous quelques patrimoines de la ville de ouagadougou</i></u></h2>
-    <div class="patri">
-    	<table>
-    	 <tr>
-    	    <th><a href="patrimoine1.html"> <img src="place.jpg" alt="pt1"><br>Place de la nation</a></th>
-    	    <th><a href="patrimoine2.html"><img src="cena.jpeg" alt="pt2" width="300px" height="300px"><br>CENASA </a> </th>
-    	    <th><a href="patrimoine3.html"><img src="kossyam.jpeg" alt="pt3" width="300px" height="300px"><br>PALAIS DE KOSSYAM</th>
-    	     <th><a href="patrimoine4.html"><img src="music3.jpeg" alt="pt3" width="300px" height="300px"><br>Musee de la music</th>
-    	    </tr>
-    	    <tr>
-    	    <td><a href="patrimoine6.html"><img src="cath.jpeg" alt="pt3" width="300px" height="300px"><br>VILLAGE ARTISANAL DE OUAGA</td>
-    	    <td> <a href="patrimoine7.html"><img src="monum.jpeg" alt="pt3" width="300px" height="300px"><br>Le monument des martyrs</td>
-    	    <td> <a href="patrimoine8.html"><img src="parc.jpg" alt="pt3" width="300px" height="300px"><br>Parc Bangr Weogo</td>
-    	     <td><a href="patrimoine9.html"><img src="man.jpeg" alt="pt3" width="300px" height="300px"><br>Le Musée de Bandrologie de Manéga</td>
-    	  </tr>
-    	  <tr>
-    	  <td><a href="patrimoine5.html"><img src="vil.jpeg" alt="pt3" width="300px" height="300px"><br>VILLAGE ARTISANAL DE OUAGA</td>
-    	   <td> <a href="patrimoine10.html"><img src="nas.jpeg" alt="pt3" width="300px" height="300px"><br>La Réserve de Nazinga</td>
-    	   </tr>
-    	  </table>
-    </div> 
+   	   <div class="photo-gallery">
+    	    <a href="patrimoine1.html"> <img src="place.jpg" alt="pt1"><p>Place de la nation</p></a>
+    	    <a href="patrimoine2.html"><img src="cena.jpeg" alt="pt2"><p>CENASA </p> </a>
+    	    <a href="patrimoine3.html"><img src="kossyam.jpeg" alt="pt3" ><p>PALAIS DE KOSSYAM</p></a>
+    	     <a href="patrimoine4.html"><img src="music3.jpeg" alt="pt3"><p>Musee de la music</p></a>
+    	    <a href="patrimoine6.html"><img src="cath.jpeg" alt="pt3"><p>VILLAGE ARTISANAL DE OUAGA</p></a>
+    	    <a href="patrimoine7.html"><img src="monum.jpeg" alt="pt3" ><p>Le monument des martyrs</p></a>
+    	    <a href="patrimoine8.html"><img src="parc.jpg" alt="pt3" ><p>Parc Bangr Weogo</p></a>
+    	    <a href="patrimoine9.html"><img src="man.jpeg" alt="pt3" ><p>Le Musée de Bandrologie de Manéga</p></a><br>	 
+    	   <a href="patrimoine5.html"><img src="vil.jpeg" alt="pt3" ><p>VILLAGE ARTISANAL DE OUAGA</p></a>
+    	   <a href="patrimoine10.html"><img src="nas.jpeg" alt="pt3"><p>La Réserve de Nazinga</p></a>
+    	   </div>
   <footer>
   <div class="footer-flex">
     <div class="footer-logo">
@@ -42,17 +42,26 @@
     <div class="footer-links">
       <h3>OUAGADOUGOU</h3>
       <ul>
-        <li><a href="projet1.html">Accueil</a></li>
-        <li><a href="#">Patrimoine</a></li>
+        <li><a href="#">Accueil</a></li>
+        <li><a href="patrimoine.html">Patrimoine</a></li>
         <li><a href="hotel.html">Reservation d'Hôtel</a></li>
         <li><a href="galerie.html">Galeries</a></li>
       </ul>
       <p>&copy; 2025 Ouaga. Tous droits réservés.</p>
     </div>
+    <div class="footer-author">
+      <h4><u>Les auteurs de ce site</u></h4>
+      <ul>
+        <li>KONE Sariabe Victor</li>
+        <li>TAMDAMBA Aicha Rainatou</li>
+         <li>TEL:00226 56 37 64 55</li>
+      </ul>
+      </div>
   </div>
 </footer>
 </body>
 </html>
+
 
 
     	    
