--- a/patrimoine1.html
+++ b/patrimoine1.html
@@ -7,33 +7,49 @@
  </head>
  <body>
    <div id="tete">
-    	<h1>BIENVENU A OUAGADOUGOU</h1>	
-    	<img src="kossyam.jpeg" alt="logo">
-    	</div>
+    	<h1><b>BIENVENU A OUAGADOUGOU</b></h1>
+    	<img src="logo.png" alt="logo">
+    	<div class="nav">
+    	<ul>
+    	    <li><a href="#">Accueil</a></li>
+    	    <li><a href="patrimoine.html">Patrimoine</a></li>
+    	     <li><a href="hotel.html">Reservation d'hotel</a></li>
+    	    <li><a href="galerie.html">Galerie</a></li>
+    	</ul>
+    </div>
         <h1><u>La place de la nation</h1>
         <p>La Place de la Nation, anciennement Place de la Révolution, est un lieu central et emblématique de Ouagadougou, la capitale du Burkina Faso. Il s'agit d'un espace de rassemblement politique et social, souvent utilisé pour des manifestations et des célébrations</p>
-    <div class="imagepatri">
-    	  <div id class="img1"><a href="place1.jpeg" ><img src="place1.jpeg" alt="image1"></a></div>
-    	  <div id class="img2"><a href="place2.jpeg"><img src="place2.jpeg" alt="image2"></a></div>
-    	  <div id class="img3"><a href="place3.jpeg"><img src="place3.jpeg" alt="image3"></a></div>
+    <div class="photo-gallery">
+    	   <a href="place1.jpeg" ><img src="place1.jpeg" alt="image1"></a>
+    	  <a href="place2.jpeg"><img src="place2.jpeg" alt="image2"></a>
+    	 <a href="place3.jpeg"><img src="place3.jpeg" alt="image3"></a>
    </div>
 <footer>
   <div class="footer-flex">
-    <div class="footer-logo">
-      <img src="pied.jpeg" alt="LogoOuaga">
-    </div>
-    <div class="footer-links">
+     <div class="footer-logo">
+       <img src="pied.jpeg" alt="LogoOuaga">
+  </div>
+   <div class="footer-links">
       <h3>OUAGADOUGOU</h3>
       <ul>
-        <li><a href="#accueil">Accueil</a></li>
-        <li><a href="#patrimoine">Patrimoine</a></li>
-        <li><a href="#hotel">Reservation d'Hôtel</a></li>
-        <li><a href="#galeries">Galeries</a></li>
+        <li><a href="#">Accueil</a></li>
+        <li><a href="patrimoine.html">Patrimoine</a></li>
+        <li><a href="hotel.html">Reservation d'Hôtel</a></li>
+        <li><a href="galerie.html">Galeries</a></li>
       </ul>
       <p>&copy; 2025 Ouaga. Tous droits réservés.</p>
     </div>
+    <div class="footer-author">
+      <h4><u>Les auteurs de ce site</u></h4>
+      <ul>
+        <li>KONE Sariabe Victor</li>
+        <li>TAMDAMBA Aicha Rainatou</li>
+         <li>TEL:00226 56 37 64 55</li>
+      </ul>
+      </div>
   </div>
 </footer>
 </body>
 </html>
+
 
