--- a/patrimoine3.html
+++ b/patrimoine3.html
@@ -6,16 +6,23 @@
    <title>projet1</title>
  </head>
  <body>
-    <div id="tete">
-    	<h1>BIENVENU A OUAGADOUGOU</h1>	
-    	<img src="kossyam.jpeg" alt="logo">
+  <div id="tete">
+    	<h1><b>BIENVENU A OUAGADOUGOU</b></h1>
+    	<img src="logo.png" alt="logo">
+    	<div class="nav">
+    	<ul>
+    	    <li><a href="#">Accueil</a></li>
+    	    <li><a href="patrimoine.html">Patrimoine</a></li>
+    	     <li><a href="hotel.html">Reservation d'hotel</a></li>
+    	 <li><a href="galerie.html">Galerie</a></li>
+    	</ul>
     </div>
         <h1><u>PALAIS DE KOSYAM</h1>
         <p>Le palais Kossyam, ou Palais de Kosyam, est la résidence officielle du président du Burkina Faso, situé dans le quartier de Ouaga 2000, à Ouagadougou. Inauguré le 11 décembre 2006. Le palais est une résidence d'État, un lieu qui reflète l'importance de la fonction présidentielle</p>
-     <div class="imagepatri">
-    	  <div id class="img1"><a href="kos1.jpeg" ><img src="kos1.jpeg" alt="image1"></a></div>
-    	  <div id class="img2"><a href="kos2.jpeg"><img src="kos2.jpeg" alt="image2"></a></div>
-    	  <div id class="img3"><a href="kos3.jpeg"><img src="kos3.jpeg" alt="image3"></a></div>
+     <div class="photo-gallery">
+    	  <a href="kos1.jpeg" ><img src="kos1.jpeg" alt="image1"></a>
+    	  <a href="kos2.jpeg"><img src="kos2.jpeg" alt="image2"></a>
+    	  <a href="kos3.jpeg"><img src="kos3.jpeg" alt="image3"></a>
    </div>
  <footer>
   <div class="footer-flex">
@@ -25,13 +32,21 @@
     <div class="footer-links">
       <h3>OUAGADOUGOU</h3>
       <ul>
-        <li><a href="#accueil">Accueil</a></li>
-        <li><a href="#patrimoine">Patrimoine</a></li>
-        <li><a href="#hotel">Reservation d'Hôtel</a></li>
-        <li><a href="#galeries">Galeries</a></li>
+        <li><a href="#">Accueil</a></li>
+        <li><a href="patrimoine.html">Patrimoine</a></li>
+        <li><a href="hotel.html">Reservation d'Hôtel</a></li>
+        <li><a href="galerie.html">Galeries</a></li>
       </ul>
       <p>&copy; 2025 Ouaga. Tous droits réservés.</p>
     </div>
+    <div class="footer-author">
+      <h4><u>Les auteurs de ce site</u></h4>
+      <ul>
+        <li>KONE Sariabe Victor</li>
+        <li>TAMDAMBA Aicha Rainatou</li>
+         <li>TEL:00226 56 37 64 55</li>
+      </ul>
+      </div>
   </div>
 </footer>
 </body>
