--- a/patrimoine4.html
+++ b/patrimoine4.html
@@ -7,15 +7,22 @@
  </head>
  <body>
    <div id="tete">
-    	<h1>BIENVENU A OUAGADOUGOU</h1>	
-    	<img src="kossyam.jpeg" alt="logo">
-    	</div>
+    	<h1><b>BIENVENU A OUAGADOUGOU</b></h1>
+    	<img src="logo.png" alt="logo">
+    	<div class="nav">
+    	<ul>
+    	    <li><a href="#">Accueil</a></li>
+    	    <li><a href="patrimoine.html">Patrimoine</a></li>
+    	     <li><a href="hotel.html">Reservation d'hotel</a></li>
+    	 <li><a href="galerie.html">Galerie</a></li>
+    	</ul>
+    </div>
         <h1><mark><u>MUSSE DE LA MUSIC</mark></h1>
         <p>Le Musée de la Musique de Ouagadougou, également appelé Musée de la Musique Georges Ouedraogo, est un musée spécialisé qui présente l'histoire de la musique burkinabè à travers une collection variée d'instruments. Il expose des instruments à vent, à cordes, à membrane et idiophones, comme des tambours, balafons, flûtes et harpes-luth. Le musée est situé dans un bâtiment original en terre stabilisée, reflétant une architecture africaine traditionnelle avec des techniques modernes</p>
-   <div class="imagepatri">
-    	  <div id class="img1"><a href="musee.jpeg" ><img src="musee.jpeg" alt="image1"></a></div>
-    	  <div id class="img2"><a href="music1.jpeg"><img src="music1.jpeg" alt="image2"></a></div>
-    	  <div id class="img3"><a href="music2.jpeg"><img src="music2.jpeg" alt="image3"></a></div>
+   <div class="photo-gallery">
+    	 <a href="musee.jpeg" ><img src="musee.jpeg" alt="image1"></a>
+    	 <a href="music1.jpeg"><img src="music1.jpeg" alt="image2"></a>
+    	 <a href="music2.jpeg"><img src="music2.jpeg" alt="image3"></a>
    </div>
   <footer>
   <div class="footer-flex">
@@ -25,13 +32,21 @@
     <div class="footer-links">
       <h3>OUAGADOUGOU</h3>
       <ul>
-        <li><a href="#accueil">Accueil</a></li>
-        <li><a href="#patrimoine">Patrimoine</a></li>
-        <li><a href="#hotel">Reservation d'Hôtel</a></li>
-        <li><a href="#galeries">Galeries</a></li>
+        <li><a href="#">Accueil</a></li>
+        <li><a href="patrimoine.html">Patrimoine</a></li>
+        <li><a href="hotel.html">Reservation d'Hôtel</a></li>
+        <li><a href="galerie.html">Galeries</a></li>
       </ul>
       <p>&copy; 2025 Ouaga. Tous droits réservés.</p>
     </div>
+    <div class="footer-author">
+      <h4><u>Les auteurs de ce site</u></h4>
+      <ul>
+        <li>KONE Sariabe Victor</li>
+        <li>TAMDAMBA Aicha Rainatou</li>
+         <li>TEL:00226 56 37 64 55</li>
+      </ul>
+      </div>
   </div>
 </footer>
 </body>
