--- a/patrimoine5.html
+++ b/patrimoine5.html
@@ -7,15 +7,22 @@
  </head>
  <body>
  <div id="tete">
-    	<h1>BIENVENU A OUAGADOUGOU</h1>	
-    	<img src="kossyam.jpeg" alt="logo">
-    	</div>
+    	<h1><b>BIENVENU A OUAGADOUGOU</b></h1>
+    	<img src="logo.png" alt="logo">
+    	<div class="nav">
+    	<ul>
+    	    <li><a href="#">Accueil</a></li>
+    	    <li><a href="patrimoine.html">Patrimoine</a></li>
+    	     <li><a href="hotel.html">Reservation d'hotel</a></li>
+    	 <li><a href="galerie.html">Galerie</a></li>
+    	</ul>
+    </div>
         <h1><mark><u>LE VILLAGE ARTISANAL DE OUAGADOUGOU</mark></h1>
         <p>Le village artisanal de Ouagadougou Le travail du cuir, la fabrication d'instruments de musique dont le djembé, la fonderie, le bronze, le batik, le bogolan, la vannerie, la sculpture sur bois, le tissage, le stylisme, la poterie, la céramique, la joaillerie, les boîtes touaregs et bien d'autres métiers.</p>
-     <div class="imagepatri">
-    	  <div id class="img1"><a href="vil1.jpeg" ><img src="vil1.jpeg" alt="image1"></a></div>
-    	  <div id class="img2"><a href="vil2.jpeg"><img src="vil2.jpeg" alt="image2"></a></div>
-    	  <div id class="img3"><a href="vil3.jpeg"><img src="vil3.jpeg" alt="image3"></a></div>
+     <div class="photo-gallery">
+    	 <a href="vil1.jpeg" ><img src="vil1.jpeg" alt="image1"></a>
+    	 <a href="vil2.jpeg"><img src="vil2.jpeg" alt="image2"></a>
+    	 <a href="vil3.jpeg"><img src="vil3.jpeg" alt="image3"></a>
    </div>
  <footer>
   <div class="footer-flex">
@@ -25,15 +32,24 @@
     <div class="footer-links">
       <h3>OUAGADOUGOU</h3>
       <ul>
-        <li><a href="#accueil">Accueil</a></li>
-        <li><a href="#patrimoine">Patrimoine</a></li>
-        <li><a href="#hotel">Reservation d'Hôtel</a></li>
-        <li><a href="#galeries">Galeries</a></li>
+        <li><a href="#">Accueil</a></li>
+        <li><a href="patrimoine.html">Patrimoine</a></li>
+        <li><a href="hotel.html">Reservation d'Hôtel</a></li>
+        <li><a href="galerie.html">Galeries</a></li>
       </ul>
       <p>&copy; 2025 Ouaga. Tous droits réservés.</p>
     </div>
+    <div class="footer-author">
+      <h4><u>Les auteurs de ce site</u></h4>
+      <ul>
+        <li>KONE Sariabe Victor</li>
+        <li>TAMDAMBA Aicha Rainatou</li>
+         <li>TEL:00226 56 37 64 55</li>
+      </ul>
+      </div>
   </div>
 </footer>
 </body>
 </html>
+
 
