--- a/patrimoine6.html
+++ b/patrimoine6.html
@@ -7,15 +7,23 @@
  </head>
  <body>
    <div id="tete">
-    	<h1>BIENVENU A OUAGADOUGOU</h1>	
-    	<img src="kossyam.jpeg" alt="logo">
+    	<h1><b>BIENVENU A OUAGADOUGOU</b></h1>
+    	<img src="logo.png" alt="logo">
+    	<div class="nav">
+    	<ul>
+    	    <li><a href="#">Accueil</a></li>
+    	    <li><a href="patrimoine.html">Patrimoine</a></li>
+    	     <li><a href="hotel.html">Reservation d'hotel</a></li>
+    	 <li><a href="galerie.html">Galerie</a></li>
+    	</ul>
+    </div>
     	</div>
-        <h1>Patrimoine6</h1>
+        <h1>cathedrale de ouagadougou</h1>
         <p>commentaire</p>
-       <div class="imagepatri">
-    	  <div id class="img1"><a href="cath1.jpg" ><img src="cath1.jpg" alt="image1"></a></div>
-    	  <div id class="img2"><a href="cath2.jpg"><img src="cath2.jpg" alt="image2"></a></div>
-    	  <div id class="img3"><a href="cath3.jpg"><img src="cath3.jpg" alt="image3"></a></div>
+       <div class="photo-gallery">
+    	  <a href="cath1.jpg" ><img src="cath1.jpg" alt="image1"></a>
+    	  <a href="cath2.jpg"><img src="cath2.jpg" alt="image2"></a>
+    	  <a href="cath3.jpg"><img src="cath3.jpg" alt="image3"></a>
    </div>
 <footer>
   <div class="footer-flex">
@@ -25,13 +33,21 @@
     <div class="footer-links">
       <h3>OUAGADOUGOU</h3>
       <ul>
-        <li><a href="#accueil">Accueil</a></li>
-        <li><a href="#patrimoine">Patrimoine</a></li>
-        <li><a href="#hotel">Reservation d'Hôtel</a></li>
-        <li><a href="#galeries">Galeries</a></li>
+        <li><a href="#">Accueil</a></li>
+        <li><a href="patrimoine.html">Patrimoine</a></li>
+        <li><a href="hotel.html">Reservation d'Hôtel</a></li>
+        <li><a href="galerie.html">Galeries</a></li>
       </ul>
       <p>&copy; 2025 Ouaga. Tous droits réservés.</p>
     </div>
+    <div class="footer-author">
+      <h4><u>Les auteurs de ce site</u></h4>
+      <ul>
+        <li>KONE Sariabe Victor</li>
+        <li>TAMDAMBA Aicha Rainatou</li>
+         <li>TEL:00226 56 37 64 55</li>
+      </ul>
+      </div>
   </div>
 </footer>
 </body>
