--- a/patrimoine7.html
+++ b/patrimoine7.html
@@ -7,8 +7,16 @@
  </head>
  <body>
  <div id="tete">
-    	<h1>BIENVENU A OUAGADOUGOU</h1>	
-    	<img src="kossyam.jpeg" alt="logo">
+    	<h1><b>BIENVENU A OUAGADOUGOU</b></h1>
+    	<img src="logo.png" alt="logo">
+    	<div class="nav">
+    	<ul>
+    	    <li><a href="#">Accueil</a></li>
+    	    <li><a href="patrimoine.html">Patrimoine</a></li>
+    	     <li><a href="hotel.html">Reservation d'hotel</a></li>
+    	 <li><a href="galerie.html">Galerie</a></li>
+    	</ul>
+    </div>
     	</div>
         <h1><mark><u>Le monument des martyrs</u></mark></h1>
         <h3>Le Monument des Martyrs de Ouagadougou, aussi appelé Monument de la Paix, est un monument de 55 mètres de haut situé au quartier Tampouy de Ouagadougou, près de l'échangeur du Nord. Il est constitué de deux calebasses, l'une retournée en bas et l'autre en haut, contenant l'eau de l'entente et de la paix retrouvée. 
@@ -23,10 +31,10 @@ Le monument est un lieu de mémoire et de commémoration pour les héros nationa
     <br>
     <p>Voici quelques images de monuments</p>
     </div>
-       <div class="imagepatri">
-    	  <div id class="img1"><a href="mo1.jpeg" ><img src="mo1.jpeg" alt="image1"></a></div>
-    	  <div id class="img2"><a href="mo2.jpeg"><img src="mo2.jpeg" alt="image2"></a></div>
-    	  <div id class="img3"><a href="mo3.jpeg"><img src="mo3.jpeg" alt="image3"></a></div>
+       <div class="photo-gallery">
+    	  <a href="mo1.jpeg" ><img src="mo1.jpeg" alt="image1"></a>
+    	  <a href="mo2.jpeg"><img src="mo2.jpeg" alt="image2"></a>
+    	  <a href="mo3.jpeg"><img src="mo3.jpeg" alt="image3"></a>
    </div>
 <footer>
   <div class="footer-flex">
@@ -36,15 +44,22 @@ Le monument est un lieu de mémoire et de commémoration pour les héros nationa
     <div class="footer-links">
       <h3>OUAGADOUGOU</h3>
       <ul>
-        <li><a href="#accueil">Accueil</a></li>
-        <li><a href="#patrimoine">Patrimoine</a></li>
-        <li><a href="#hotel">Reservation d'Hôtel</a></li>
-        <li><a href="#galeries">Galeries</a></li>
+        <li><a href="#">Accueil</a></li>
+        <li><a href="patrimoine.html">Patrimoine</a></li>
+        <li><a href="hotel.html">Reservation d'Hôtel</a></li>
+        <li><a href="galerie.html">Galeries</a></li>
       </ul>
       <p>&copy; 2025 Ouaga. Tous droits réservés.</p>
     </div>
+    <div class="footer-author">
+      <h4><u>Les auteurs de ce site</u></h4>
+      <ul>
+        <li>KONE Sariabe Victor</li>
+        <li>TAMDAMBA Aicha Rainatou</li>
+         <li>TEL:00226 56 37 64 55</li>
+      </ul>
+      </div>
   </div>
 </footer>
 </body>
 </html>
-
