--- a/patrimoine8.html
+++ b/patrimoine8.html
@@ -6,8 +6,17 @@
    <title>projet1</title>
  </head>
  <body>
-  <div id="tete">
-    	<h1>BIENVENU A OUAGADOUGOU</h1>	
+ <div id="tete">
+    	<h1><b>BIENVENU A OUAGADOUGOU</b></h1>
+    	<img src="logo.png" alt="logo">
+    	<div class="fast">
+    	<ul>
+    	    <li><a href="#">Accueil</a></li>
+    	    <li><a href="patrimoine.html">Patrimoine</a></li>
+    	     <li><a href="hotel.html">Reservation d'hotel</a></li>
+    	 <li><a href="galerie.html">Galerie</a></li>
+    	</ul>
+    </div>
     	</div>
         <h1><mark><u>Le Parc Urbain Bangr-Wéoogo:
 une aire de conservation de la diversité floristique au coeur de la ville
@@ -32,13 +41,13 @@ rencontre également un manchon de forêt galerie le long du cours d’eau et qu
 En ce qui concerne son réseau hydrographique, il est constitué d’un cours d’eau naturel, qui est un bras du massili et de
 nombreux canaux qui drainent les eaux usées de la ville de Ouagadougou.
 	Ce parc étant situé au cœur d’une capitale, les principauxutilisateurs de ses ressources sont les citadins. Mais les populations de Toukin sont considérées comme les autochtones du Parc qui constitue pour eux un bois sacré dans lequel ils effectuent un culte deux fois par an. </p></pre>
-   <div class="imagepatri">
-    	  <div id class="img1"><a href="prc1.jpeg" ><img src="parc1.jpeg" alt="image1"></a></div>
-    	  <div id class="img2"><a href="parc2.jpeg"><img src="parc2.jpeg" alt="image2"></a></div>
-    	  <div id class="img3"><a href="parc3.jpeg"><img src="parc3.jpeg" alt="image3"></a></div>
-    	  <div id class="img3"><a href="parc4.jpeg"><img src="parc4.jpeg" alt="image4"></a></div>
+   <div class="photo-gallery">
+    	  <a href="prc1.jpeg" ><img src="parc1.jpeg" alt="image1"></a>
+       	  <a href="parc2.jpeg"><img src="parc2.jpeg" alt="image2"></a>
+    	  <a href="parc3.jpeg"><img src="parc3.jpeg" alt="image3"></a>
+    	  <a href="parc4.jpeg"><img src="parc4.jpeg" alt="image4"></a>
    </div>
- <footer>
+<footer>
   <div class="footer-flex">
     <div class="footer-logo">
       <img src="pied.jpeg" alt="LogoOuaga">
@@ -46,15 +55,22 @@ nombreux canaux qui drainent les eaux usées de la ville de Ouagadougou.
     <div class="footer-links">
       <h3>OUAGADOUGOU</h3>
       <ul>
-        <li><a href="#accueil">Accueil</a></li>
-        <li><a href="#patrimoine">Patrimoine</a></li>
-        <li><a href="#hotel">Reservation d'Hôtel</a></li>
-        <li><a href="#galeries">Galeries</a></li>
+        <li><a href="#">Accueil</a></li>
+        <li><a href="patrimoine.html">Patrimoine</a></li>
+        <li><a href="hotel.html">Reservation d'Hôtel</a></li>
+        <li><a href="galerie.html">Galeries</a></li>
       </ul>
       <p>&copy; 2025 Ouaga. Tous droits réservés.</p>
     </div>
+    <div class="footer-author">
+      <h4><u>Les auteurs de ce site</u></h4>
+      <ul>
+        <li>KONE Sariabe Victor</li>
+        <li>TAMDAMBA Aicha Rainatou</li>
+         <li>TEL:00226 56 37 64 55</li>
+      </ul>
+      </div>
   </div>
 </footer>
 </body>
 </html>
-
