--- a/patrimoine9.html
+++ b/patrimoine9.html
@@ -6,11 +6,18 @@
    <title>projet1</title>
  </head>
  <body>
-   <div id="tete">
-    	<h1>BIENVENU A OUAGADOUGOU</h1>	
-    	<img src="kossyam.jpeg" alt="logo">
-    	</div>
-        <h1><u>Le Musée de Bendrologie de Manéga</u><h1>
+    <div id="tete">
+    	<h1><b>BIENVENU A OUAGADOUGOU</b></h1>
+    	<img src="logo.png" alt="logo">
+    	<div class="nav">
+    	<ul>
+    	    <li><a href="#">Accueil</a></li>
+    	    <li><a href="patrimoine.html">Patrimoine</a></li>
+    	     <li><a href="hotel.html">Reservation d'hotel</a></li>
+    	    <li><a href="galerie.html">Galerie</a></li>
+    	</ul>
+    </div>
+  <h1><u>Le Musée de Bendrologie de Manéga</u><h1>
       <pr>  <p>Le Musée de Bendrologie de Manéga, situé au Burkina Faso, est un musée dédié à la "Bendrologie" ou "science du langage tambouriné". Il rassemble une vaste collection d'objets artistiques et archéologiques, dont des masques, des fétiches, des instruments de musique et des céramiques traditionnelles, ainsi que des pièces archéologiques vieilles de plusieurs milliers d'années. Fondé par l'avocat burkinabé Titinga Frédéric Pacere, le musée vise à préserver et valoriser le patrimoine culturel burkinabé, en particulier le langage des tambours et des masques. 
 Le musée est une institution culturelle majeure au Burkina Faso. Il conserve près de 10 000 objets et des pièces archéologiques, souvent datées de plusieurs siècles. Parmi les objets exposés, on peut citer : 
 
@@ -33,19 +40,14 @@ Facebook ·
 Faso_vitrine
 Musée de Bendrologie de Manéga - MoMAA
 One of the standout exhibits includes 200-year-old Mossi rifles, which provide a fascinating glimpse into the country's past. ...
-MoMAA
-
-    Tout afficher
-
-Les réponses de l'IA peuvent contenir des erreurs. En savoir plus
 Fondé par l'avocat, chercheur et écrivain burkinabé Maître Titinga Frédéric Pacere, le musée conserve près de 10 000 objets et des pièces archéologiques vieilles de 6 000 ans. Il est dédié à la " Bendrologie " ou " science du langage tambouriné ", qui étudie le langage des tams-tams et des masques.</p>
-   </per>
-   <div class="imagepatri">
-    	  <div id class="img1"><a href="man1.jpeg" ><img src="man1.jpeg" alt="image1"></a></div>
-    	  <div id class="img2"><a href="man2.jpeg"><img src="man2.jpeg" alt="image2"></a></div>
-    	  <div id class="img3"><a href="man3.jpeg"><img src="man3.jpeg" alt="image3"></a></div>
+   </pre>
+   <div class="photo-gallery">
+    	 <a href="man1.jpeg" ><img src="man1.jpeg" alt="image1"></a>
+    	 <a href="man2.jpeg"><img src="man2.jpeg" alt="image2"></a>
+    	 <a href="man3.jpeg"><img src="man3.jpeg" alt="image3"></a>
    </div>
- <footer>
+<footer>
   <div class="footer-flex">
     <div class="footer-logo">
       <img src="pied.jpeg" alt="LogoOuaga">
@@ -53,13 +55,21 @@ Fondé par l'avocat, chercheur et écrivain burkinabé Maître Titinga Frédéri
     <div class="footer-links">
       <h3>OUAGADOUGOU</h3>
       <ul>
-        <li><a href="#accueil">Accueil</a></li>
-        <li><a href="#patrimoine">Patrimoine</a></li>
-        <li><a href="#hotel">Reservation d'Hôtel</a></li>
-        <li><a href="#galeries">Galeries</a></li>
+        <li><a href="#">Accueil</a></li>
+        <li><a href="patrimoine.html">Patrimoine</a></li>
+        <li><a href="hotel.html">Reservation d'Hôtel</a></li>
+        <li><a href="galerie.html">Galeries</a></li>
       </ul>
       <p>&copy; 2025 Ouaga. Tous droits réservés.</p>
     </div>
+    <div class="footer-author">
+      <h4><u>Les auteurs de ce site</u></h4>
+      <ul>
+        <li>KONE Sariabe Victor</li>
+        <li>TAMDAMBA Aicha Rainatou</li>
+         <li>TEL:00226 56 37 64 55</li>
+      </ul>
+      </div>
   </div>
 </footer>
 </body>
