--- a/hotel.html
+++ b/hotel.html
@@ -12,19 +12,61 @@
     	    </script>
     </head>
     <body>
-    <div id="tete">
-    	<h1>BIENVENU A OUAGADOUGOU</h1>	
+  <div id="tete">
+    	<h1><b>BIENVENU A OUAGADOUGOU</b></h1>
+    	<img src="logo.png" alt="logo">
+    	<div class="nav">
+    	<ul>
+    	    <li><a href="#">Accueil</a></li>
+    	    <li><a href="patrimoine.html">Patrimoine</a></li>
+    	     <li><a href="hotel.html">Reservation d'hotel</a></li>
+    	 <li><a href="galerie.html">Galerie</a></li>
+    	</ul>
+    </div>
     	</div>
     <h2>voici une liste des hotels</h2>
-    <div class="portion">
-    	<ul>
-    	<li><p><u>BRAVIA HOTEL Ouaga</u><br>Bravia Hotel Ouagadougou: Cet hôtel offre un barbecue, une vue sur la piscine, un restaurant sur place, des chambres climatisées avec télévision à écran plat et salle de bain privative.<br> Il propose également une connexion Wi-Fi gratuite, un parking privé et une boutique de souvenirs</p><br><pre><img src="hotel1.jpeg" alt="hotel1">       <img src="brav1.jpeg" alt="hotel1">          <img src="brav2.jpeg" alt="hotel1"></pre></li>
-   <li><p><u>SAPATEL SILMANDE OUAGADOUGOU</u>L'hôtel propose 160 chambres, 10 suites avec toutes les facilités actuelles. Un parking de 50 places. De délicieux repas dans nos restaurants pour petit ...<br>
-3,3(171) · Prix : € (D'après les tarifs quotidiens moyens d'une chambre standard chez nos partenaires)<br><pre><img src="sop.jpeg" alt="hotel1">       <img src="sop1.jpeg" alt="hotel1">          <img src="sop2.jpeg" alt="hotel1">       <img src="sop3.jpeg" alt="hotel1"></pre></li>
-    	<li><p><u>Lancaster Ouaga 2000🔥 🔥 🔥 🔥 </u><br>Les chambres sont équipées d'une télévision à écran plat et d'une climatisation. Le wi-fi gratuit vous permet également de vous relaxer en restant connecté.<br>
-3,6(277) · Prix : €€ (D'après les tarifs quotidiens moyens d'une chambre standard chez nos partenaires)</p><pre><img src="sop.jpeg" alt="hotel1">       <img src="lan.jpeg" alt="hotel1">          <img src="lan1.jpeg" alt="hotel1">       <img src="lan2.jpeg" alt="hotel1"><br>            <img src="lan3.jpeg" alt="hotel1">   <img src="lan4.jpeg" alt="hotel1"></pre></li>  
-     </ul>
-    </div>
+   <div class="portion">
+  <ul>
+    <li>
+      <p><u>BRAVIA HOTEL Ouaga</u><br>
+        Bravia Hotel Ouagadougou: Cet hôtel offre un barbecue, une vue sur la piscine, un restaurant sur place, des chambres climatisées avec télévision à écran plat et salle de bain privative.<br>
+        Il propose également une connexion Wi-Fi gratuite, un parking privé et une boutique de souvenirs.
+      </p>
+      <div class="photo-gallery">
+        <img src="hotel1.jpeg" alt="hotel1">
+        <img src="brav1.jpeg" alt="hotel1">
+        <img src="brav2.jpeg" alt="hotel1">
+      </div>
+    </li>
+
+    <li>
+      <p><u>SAPATEL SILMANDE OUAGADOUGOU</u><br>
+        L'hôtel propose 160 chambres, 10 suites avec toutes les facilités actuelles. Un parking de 50 places. De délicieux repas dans nos restaurants pour petit ...<br>
+        3,3(171) · Prix : € (D'après les tarifs quotidiens moyens d'une chambre standard chez nos partenaires)
+      </p>
+      <div class="photo-gallery">
+        <img src="sop.jpeg" alt="hotel1">
+        <img src="sop1.jpeg" alt="hotel1">
+        <img src="sop2.jpeg" alt="hotel1">
+        <img src="sop3.jpeg" alt="hotel1">
+      </div>
+    </li>
+
+    <li>
+      <p><u>Lancaster Ouaga 2000 🔥🔥🔥🔥</u><br>
+        Les chambres sont équipées d'une télévision à écran plat et d'une climatisation. Le wi-fi gratuit vous permet également de vous relaxer en restant connecté.<br>
+        3,6(277) · Prix : €€ (D'après les tarifs quotidiens moyens d'une chambre standard chez nos partenaires)
+      </p>
+      <div class="photo-gallery">
+        <img src="lan.jpeg" alt="hotel1">
+        <img src="lan1.jpeg" alt="hotel1">
+        <img src="lan2.jpeg" alt="hotel1">
+        <img src="lan3.jpeg" alt="hotel1">
+        <img src="lan4.jpeg" alt="hotel1">
+      </div>
+    </li>
+  </ul>
+</div>
     <div id="hotel">
     	<form>
     	 choix de l'hotel:<select value="choix de l'hotel">
@@ -55,13 +97,21 @@
     <div class="footer-links">
       <h3>OUAGADOUGOU</h3>
       <ul>
-        <li><a href="projet1.html">Accueil</a></li>
+        <li><a href="#">Accueil</a></li>
         <li><a href="patrimoine.html">Patrimoine</a></li>
-        <li><a href="#">Reservation d'Hôtel</a></li>
+        <li><a href="hotel.html">Reservation d'Hôtel</a></li>
         <li><a href="galerie.html">Galeries</a></li>
       </ul>
       <p>&copy; 2025 Ouaga. Tous droits réservés.</p>
     </div>
+    <div class="footer-author">
+      <h4><u>Les auteurs de ce site</u></h4>
+      <ul>
+        <li>KONE Sariabe Victor</li>
+        <li>TAMDAMBA Aicha Rainatou</li>
+         <li>TEL:00226 56 37 64 55</li>
+      </ul>
+      </div>
   </div>
 </footer>
 </body>
