--- a/galerie.html
+++ b/galerie.html
@@ -6,49 +6,39 @@
    <title>projet1</title>
  </head>
  <body>
-   <div id="image">
-     <table>
-         <tr>
-           <th><a href="vil.jpeg"><img src="vil.jpeg" alt="image1"></a></th>
-           <th><a href="vil1.jpeg"><img src="vil1.jpeg" alt="image2"></a></th>
-           <th><a href="vil2.jpeg"><img src="vil2.jpeg" alt="image3"></a></th>
-          </tr>
-          <tr>
-             <td><a href="place.jpg"><img src="place.jpg" alt="image4"></a></td>
-             <td><a href="place1.jpeg"><img src="place1.jpeg" alt="image5"></a></td>
-             <td><a href="place3.jpeg"><img src="place3.jpeg" alt="image6"></a></td>
-          </td>
-        </tr>
-        <tr>
-             <td><a href="music2.jpeg"><img src="music3.jpeg" alt="image7"></a></td>
-             <td><a href="music3.jpeg"><img src="music3.jpeg" alt="image8"></a></td>
-             <td><a href="music1.jpeg"><img src="music1.jpeg" alt="image9"></a></td>
-          </td>
-        </tr>
-         <tr>
-             <td><a href="mo1.jpeg"><img src="mo1.jpeg" alt="image4"></a></td>
-             <td><a href="mo2.jpeg"><img src="mo2.jpeg" alt="image5"></a></td>
-             <td><a href="mo3.jpeg"><img src="mo3.jpeg" alt="image6"></a></td>
-          </td>
-        </tr>
-        <tr>
-             <td><a href="man.jpeg"><img src="man.jpeg" alt="image7"></a></td>
-             <td><a href="man3.jpeg"><img src="man3.jpeg" alt="image8"></a></td>
-             <td><a href="man1.jpeg"><img src="man1.jpeg" alt="image9"></a></td>
-          </td>
-        </tr>
-         <tr>
-             <td><a href="cath2.jpg"><img src="cath2.jpg" alt="image4"></a></td>
-             <td><a href="cath3.jpg"><img src="cath3.jpg" alt="image5"></a></td>
-             <td><a href="cath.jpeg"><img src="cath.jpeg" alt="image6"></a></td>
-          </td>
-        </tr>
-        <tr>
-             <td><a href="kos2.jpeg"><img src="kos2.jpeg" alt="image7"></a></td>
-             <td><a href="kos3.jpeg"><img src="kos3.jpeg" alt="image8"></a></td>
-             <td><a href="kos1.jpeg"><img src="kos1.jpeg" alt="image9"></a></td>
-          </td>
-        </tr>
+  <div id="tete">
+    	<h1><b>BIENVENU A OUAGADOUGOU</b></h1>
+    	<img src="logo.png" alt="logo">
+    	<div class="nav">
+    	<ul>
+    	    <li><a href="#">Accueil</a></li>
+    	    <li><a href="patrimoine.html">Patrimoine</a></li>
+    	     <li><a href="hotel.html">Reservation d'hotel</a></li>
+    	 <li><a href="galerie.html">Galerie</a></li>
+    	</ul>
+    </div>
+   <div class="gallery">
+           <a href="vil.jpeg"><img src="vil.jpeg" alt="image1"></a>
+           <a href="vil1.jpeg"><img src="vil1.jpeg" alt="image2"></a>
+           <a href="vil2.jpeg"><img src="vil2.jpeg" alt="image3"></a>
+           <a href="place.jpg"><img src="place.jpg" alt="image4"></a>
+           <a href="place1.jpeg"><img src="place1.jpeg" alt="image5"></a>
+           <a href="place3.jpeg"><img src="place3.jpeg" alt="image6"></a>
+           <a href="music2.jpeg"><img src="music3.jpeg" alt="image7"></a>
+           <a href="music3.jpeg"><img src="music3.jpeg" alt="image8"></a>
+           <a href="music1.jpeg"><img src="music1.jpeg" alt="image9"></a>
+           <a href="mo1.jpeg"> <img src="mo1.jpeg" alt="image4"></a>
+           <a href="mo2.jpeg"> <img src="mo2.jpeg" alt="image5"></a>
+           <a href="mo3.jpeg"><img src="mo3.jpeg" alt="image6"></a>
+           <a href="man.jpeg"><img src="man.jpeg" alt="image7"></a>
+           <a href="man3.jpeg"><img src="man3.jpeg" alt="image8"></a>
+           <a href="man1.jpeg"><img src="man1.jpeg" alt="image9"></a>
+           <a href="cath2.jpg"><img src="cath2.jpg" alt="image4"></a>
+           <a href="cath3.jpg"><img src="cath3.jpg" alt="image5"></a>
+           <a href="cath.jpeg"><img src="cath.jpeg" alt="image6"></a>
+ 	   <a href="kos2.jpeg"><img src="kos2.jpeg" alt="image7"></a>
+           <a href="kos3.jpeg"><img src="kos3.jpeg" alt="image8"></a>
+           <a href="kos1.jpeg"><img src="kos1.jpeg" alt="image9"></a>
      </div>
  <footer>
   <div class="footer-flex">
@@ -61,11 +51,20 @@
         <li><a href="#">Accueil</a></li>
         <li><a href="patrimoine.html">Patrimoine</a></li>
         <li><a href="hotel.html">Reservation d'Hôtel</a></li>
-        <li><a href="#">Galeries</a></li>
+        <li><a href="galerie.html">Galeries</a></li>
       </ul>
       <p>&copy; 2025 Ouaga. Tous droits réservés.</p>
     </div>
+    <div class="footer-author">
+      <h4><u>Les auteurs de ce site</u></h4>
+      <ul>
+        <li>KONE Sariabe Victor</li>
+        <li>TAMDAMBA Aicha Rainatou</li>
+         <li>TEL:00226 56 37 64 55</li>
+      </ul>
+      </div>
   </div>
 </footer>
 </body>
 </html>
+
