--- a/patrimoine10.html
+++ b/patrimoine10.html
@@ -7,9 +7,16 @@
  </head>
  <body>
  <div id="tete">
-    	<h1>BIENVENU A OUAGADOUGOU</h1>	
-    	<img src="kossyam.jpeg" alt="logo">
-    	</div>
+    	<h1><b>BIENVENU A OUAGADOUGOU</b></h1>
+    	<img src="logo.png" alt="logo">
+    	<div class="nav">
+    	<ul>
+    	    <li><a href="#">Accueil</a></li>
+    	    <li><a href="patrimoine.html">Patrimoine</a></li>
+    	     <li><a href="hotel.html">Reservation d'hotel</a></li>
+    	 <li><a href="galerie.html">Galerie</a></li>
+    	</ul>
+    </div>
         <h1><mark>La Réserve de Nazinga</mark></h1>
         <p>La Réserve de Nazinga, située près de Pô au Burkina Faso, est un site de conservation naturelle remarquable, connue pour son importante population d'éléphants, l'une des plus vastes d'Afrique de l'Ouest. La réserve est gérée par des Canadiens et comprend des zones distinctes dédiées à la conservation, à une zone tampon et à la chasse contrôlée. Elle abrite une faune diversifiée, incluant diverses espèces d'antilopes, des singes, des crocodiles et une riche avifaune. 
 Description plus détaillée :
@@ -30,12 +37,12 @@ La réserve jouxte la forêt classée de la Sissili et est proche du parc nation
 Importance :
 La Réserve de Nazinga est considérée comme un lieu de refuge important pour une faune diverse, grâce à sa gestion saine et à la qualité de son biotope. 
 </p>
-    <div class="imagepatri">
-    	  <div id class="img1"><a href="nas1.jpeg" ><img src="nas1.jpeg" alt="image1"></a></div>
-    	  <div id class="img2"><a href="nas2.jpeg"><img src="nas2.jpeg" alt="image2"></a></div>
-    	  <div id class="img3"><a href="nas3.jpeg"><img src="nas3.jpeg" alt="image3"></a></div>
+    <div class="photo-gallery">
+    	  <a href="nas1.jpeg" ><img src="nas1.jpeg" alt="image1"></a>
+    	  <a href="nas2.jpeg"><img src="nas2.jpeg" alt="image2"></a>
+    	  <a href="nas3.jpeg"><img src="nas3.jpeg" alt="image3"></a>
    </div>
-  <footer>
+ <footer>
   <div class="footer-flex">
     <div class="footer-logo">
       <img src="pied.jpeg" alt="LogoOuaga">
@@ -43,15 +50,22 @@ La Réserve de Nazinga est considérée comme un lieu de refuge important pour u
     <div class="footer-links">
       <h3>OUAGADOUGOU</h3>
       <ul>
-        <li><a href="#accueil">Accueil</a></li>
-        <li><a href="#patrimoine">Patrimoine</a></li>
-        <li><a href="#hotel">Reservation d'Hôtel</a></li>
-        <li><a href="#galeries">Galeries</a></li>
+        <li><a href="#">Accueil</a></li>
+        <li><a href="patrimoine.html">Patrimoine</a></li>
+        <li><a href="hotel.html">Reservation d'Hôtel</a></li>
+        <li><a href="galerie.html">Galeries</a></li>
       </ul>
       <p>&copy; 2025 Ouaga. Tous droits réservés.</p>
     </div>
+    <div class="footer-author">
+      <h4><u>Les auteurs de ce site</u></h4>
+      <ul>
+        <li>KONE Sariabe Victor</li>
+        <li>TAMDAMBA Aicha Rainatou</li>
+         <li>TEL:00226 56 37 64 55</li>
+      </ul>
+      </div>
   </div>
 </footer>
 </body>
 </html>
-
