--- a/patrimoine2.html
+++ b/patrimoine2.html
@@ -17,16 +17,17 @@
     	 <li><a href="galerie.html">Galerie</a></li>
     	</ul>
     </div>
+    </div>
         <h1>CENASA (Centre National des Arts, des Spectacles et de l'Audiovisuel) de ouagadougou</h1>
-     <pre>   <p>Le CENASA est un Etablissement Public à caractère Administratif (EPA) sous tutelle du Ministère de la Culture, des Arts et du Tourisme. C’est une structure de création, de production et de promotion des arts du spectacle et de l’audiovisuel.
-
-Missions :
-– La gestion et la promotion des Ensembles Artistiques Nationaux: Orchestre National du Burkina, Ballet National, Ensemble Instrumental traditionnel.
-– La gestion de la salle de spectacles du théâtre national Koamba LANKOANDE et de ses moyens techniques;
-– L’organisation de spectacles et la diffusion de films cinématographiques et vidéographiques;
-– La production, la coproduction et la production exécutive d’œuvres audiovisuelles;
-– L’enregistrement et la duplication d’œuvres musicales, théâtrales et humoristiques ;
-– Le renforcement de la coopération culturelle africaine et internationale.</p></pre>
+     <p>Le CENASA est un Etablissement Public à caractère Administratif (EPA) sous tutelle du Ministère de la Culture, des Arts et du Tourisme. C’est une structure de création, de production et de promotion des arts du spectacle et de l’audiovisuel.
+<br>
+Missions :<br>
+– La gestion et la promotion des Ensembles Artistiques Nationaux: Orchestre National du Burkina, Ballet National, Ensemble Instrumental traditionnel.<br>
+– La gestion de la salle de spectacles du théâtre national Koamba LANKOANDE et de ses moyens techniques;<br>
+– L’organisation de spectacles et la diffusion de films cinématographiques et vidéographiques;<br>
+– La production, la coproduction et la production exécutive d’œuvres audiovisuelles;<br>
+– L’enregistrement et la duplication d’œuvres musicales, théâtrales et humoristiques ;<br>
+– Le renforcement de la coopération culturelle africaine et internationale.</p><br>
          <div class="photo-gallery">
     	  <a href="cena1.jpeg" ><img src="cena1.jpeg" alt="image1"></a>
     	  <a href="cena2.jpeg"><img src="cena2.jpeg" alt="image2"></a>
